Titles on Core are cut off  (Fixes #984)

--- a/hugo/themes/dora-2025/assets/scss/research.scss
+++ b/hugo/themes/dora-2025/assets/scss/research.scss
@@ -79,6 +79,11 @@ h3 {
     }
 }
 
+// Wider page allows room for Core diagram
+main:has(#app) {
+  max-width:1200px;
+}
+
 tab_links {
     display:block;
     width:100%;
